Overflowing content fixed at use cases

--- a/src/css/section.module.css
+++ b/src/css/section.module.css
@@ -11,6 +11,7 @@
   width: 100%;
   padding: 4.5rem 1rem;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 .section--accent {
